# temporal-play

./: .gitignore  LICENSE  Makefile  README.md  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-to-pypi-uv.yml  test-coverage-lint-uv.yml
containers/: Containerfile  Makefile  make.bat
docs/: conf.py  index.rst
temporal_play/: __init__.py  example.py  temporal_play_cli.py
temporal_play/activities/: README.md  __init__.py  activities.py
temporal_play/ansible_example/: __init__.py  ansible_runner_example.py
temporal_play/ansible_example/automation/: playbook_hello.yaml
temporal_play/ansible_example/automation/templates/: hello_world.j2
temporal_play/client_factory/: __init__.py  client_factory.py
temporal_play/executors/: README.md  __init__.py  executors.py
temporal_play/general_temporal_client/: __init__.py  general.py
temporal_play/git_client/: __init__.py  git_client.py
temporal_play/hvac_client/: README.md  __init__.py  hvac_client.py
temporal_play/nautobot_gql_client/: __init__.py  nautobot_gql_client.py
temporal_play/netmiko_client/: __init__.py  netmiko_client.py
temporal_play/nexus/: README.md  __init__.py
temporal_play/nexus/handlers/: __init__.py  handlers.py
temporal_play/nexus/services/: __init__.py  services.py
temporal_play/nexus/workers/: __init__.py  nexus_worker_creator.py  workers.py
temporal_play/rendering/: rendering.py
temporal_play/schemas/: README.md  __init__.py  schemas.py
temporal_play/simple_ollama/: __init__.py  simple_ollama.py
temporal_play/workers/: README.md  __init__.py  worker_1.py  worker_consume_only_nexus.py  worker_creator.py
temporal_play/workflows/: README.md  __init__.py  workflows.py
tests/data/: README.md
