[build-system]
requires = [
    "setuptools>=67.6.0",
    "wheel>=0.40.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-play"

dynamic = ["readme"]
version = "0.1.0"

requires-python = ">=3.11"
description = "Temporal play stuff"
keywords = [
]
authors = [
  { name="Benjamin P. Trachtenberg", email="e_ben_75-python@yahoo.com" },
]
maintainers = [
  {name = "Benjamin P. Trachtenberg", email = "e_ben_75-python@yahoo.com"},
]
license = "MIT"
license-files = [
    "LICENSE"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",]


dependencies = [
    "hvac>=2.4.0",
    "niquests>=3.16.1",
    "python-dotenv>=1.2.1",
    "temporalio>=1.21.1",
]

[dependency-groups]
dev = [
    "black",
    "tomli; python_version < '3.11'",
    "pytest-cov",
    "sphinx",
    "pylint",
    "myst-parser",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid",
    "bandit",
    "mypy",
]


[project.urls]
Documentation = "https://temporal-play.readthedocs.io/en/latest/"
Source = "https://github.com/btr1975/temporal-play"
Tracker = "https://github.com/btr1975/temporal-play/issues"


[project.scripts]
temporal-play-cli = "temporal_play:cli"


[tool.setuptools.packages.find]
include = [
    "temporal_play*",
]

# Add or remove file extensions to include the data
[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}


[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "place_holder: marks tests as place_holder (deselect with -m 'not place_holder')",
]

[tool.coverage.run]
command_line= "-m pytest -vvv"

[tool.coverage.report]
include = [
    "temporal_play/*"
]
fail_under = 70

[tool.pylint]
max-line-length = 120
# This allows pylint to complain on FIXME and XXX notes
notes = [
    "FIXME",
    "XXX",
]
fail-under = 9.9

[tool.black]
line-length = 120

[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    "docs"
]


# UV settings reference https://docs.astral.sh/uv/reference/settings/

[tool.uv]
keyring-provider = "subprocess"
native-tls = true


